# takehome

./: .gitignore  pyproject.toml  streamlit_app.py  wikitext.py
app/: feedback.py  frq.py  llm.py  streamlit_app.py  student.py  wikitext.py
