[tool.poetry]
authors     = ["Luca Dorigo <dorigoluca@gmail.com>"]
description = ""
name        = "crossover-task"
readme      = "README.md"
version     = "0.1.0"

[tool.poetry.dependencies]
openai        = "^0.27.9"
python        = "^3.11"
streamlit     = "^1.26.0"
watchdog      = "^3.0.0"
wikipedia     = "^1.4.0"
wikipedia-api = "^0.6.0"


[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
